--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.app{
+  height: 100rem;
+}
+
+.header {
+  background-color: yellow;
+  width: 100%;
+  height: 15%;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.search-form {
+  width: 50%;
+  height: 30%;
+  margin: auto;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  
+}
+
+.search-input {
+  width: 70%;
+  height: 50%;
+  padding: 12px;
+}
+
+.info-card {
+  width: 25%;
+  height: 15%;
+  margin: auto;
+  text-align:center ;
+  background-color: black;
   color: white;
+  border-radius: 10%;
 }
 
-.App-link {
-  color: #61dafb;
+.info-card div {
+  margin-top: 1.5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.info-card img {
+  max-width: 15%;
 }
